# yast-openwsman-yast

./: .gitignore  MAINTAINER  Makefile.am  README  RPMNAME  configure.in  openwsman-yast.changes  openwsman-yast.spec.in
src/: Makefile.am  WFM.h  yast.c  yast.h  yast_stub_custom.c  yast_stub_identify.c  yast_yast.cc
src/openwsman/: Makefile.am
