#wsman-soap.h: missing in 1.0.1, available in trunk
#wsman-soap-envelope.h: missing in 1.0.1, available in trunk
#wsman-declarations.h: see http://www.openwsman.org/ticket/99
#wsman-dispatcher.h: see http://www.openwsman.org/ticket/98

noinst_HEADERS = \
	wsman-soap.h		\
	wsman-soap-envelope.h	\
	wsman-declarations.h	\
	wsman-dispatcher.h
